# Banking-Data-Engineering-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  dbt.yml  terraform.yml
airflow/dags/: banking_daily_pipeline.py  streaming_consumer_dag.py
data/raw/: transactions_sample.csv
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: utils.sql
dbt/models/: schema.yml
dbt/models/gold/: dim_customer_360.sql
dbt/models/silver/: fct_transactions.sql
dbt/snapshots/: snap_customers_scd2.sql
grafana/dashboards/: pipeline_health.json
great_expectations/checkpoints/: bronze_transactions.json
great_expectations/expectations/: bronze_transactions.json
kafka/consumers/: transaction_consumer.py
kafka/producers/: transaction_producer.py
spark/bronze/: ingest_customers.py  ingest_transactions.py
spark/gold/: aml_risk_scores.py  daily_pnl.py
spark/silver/: cleanse_transactions.py  scd2_customers.py
spark/utils/: data_quality.py  spark_session.py
terraform/environments/dev/: main.tf
terraform/modules/kafka/: main.tf
terraform/modules/redshift/: main.tf
terraform/modules/s3/: main.tf
tests/unit/: test_aml_risk_scoring.py  test_data_quality.py
